yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sheets
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sheets
  template:
    metadata:
      labels:
        name: sheets
    spec:
      containers:
      - name: sheets
        image: <OCIIMAGE>
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: "2"
            memory: 1Gi
